Saved the validator notebook for continuing work

--- a/rule_validation.ipynb
+++ b/rule_validation.ipynb
@@ -90,7 +90,12 @@
    "pygments_lexer": "ipython3",
    "version": "3.8.10"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "6b46aa6dbbee16ac74f380dfa41e6639e9c57fc95016a5dd9e1e0a390d40deee"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
